# Soni_Agent

./: .env.example  .gitignore  Quy chế CTSV ĐHBK Hà Nội 2025.3.10.md  README.md  agent.py  chunk_child.py  insert.py  pyproject.toml  search.py  test.py  tools.py  utils.py
chunking/: indexer.py  main.py  metadata.py  parser.py  prompts.py  splitter.py  test_chunking.py
data/: all_chunk_qcdt.json  all_chunk_quychectsv.json  qcdt.html  qcdt.md  qcdt_chunks.json  sotaysv.html  sotaysv.md
utils/: fine_tune.jsonl  insert.py
