[project]
name = "soni-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "google-genai>=1.30.0",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "llama-index>=0.13.1",
    "llama-index-embeddings-huggingface>=0.6.0",
    "llama-index-vector-stores-postgres>=0.6.3",
    "loguru>=0.7.3",
    "lxml>=6.0.0",
    "markdownify>=1.2.0",
    "psycopg2-binary>=2.9.10",
    "pymongo>=4.14.0",
    "sentence-transformers>=5.1.0",
    "transformers>=4.55.2",
]
